@@ -2,6 +2,9 @@ KNOWN BUGS:
 * Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
+Changes since 20041213a:
+- Feature: when a fresh post matches a filter, reject the post.
+
 20041213a: Changes since 20041113a:
 - Bugfix: get rid of cosmetic bug "Groupinfo file damaged, ignoring line: 18"
 - Change: when complaining about damaged groupinfo file, print the line
